--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"start": "next start",
 		"lint": "next lint",
 		"prebuild": "prisma generate",
-		"predev": "prisma generate && npx prisma db push --accept-data-loss --force-reset && node ./prisma/seed.mjs",
+		"predev": "prisma generate",
 		"prisma:migrate": "prisma migrate deploy"
 	},
 	"dependencies": {
